--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -14,11 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
     "mongoose": "^9.2.0",
-    "nanoid": "^5.1.6"
+    "nanoid": "^5.1.6",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
