--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.0",
     "nanoid": "^5.1.6",
     "uuid": "^13.0.0"
